# simplebins

./: .gitignore  LICENESE.txt  README.md  env.yaml  pyproject.toml  setup.py  tox.ini
.github/workflows/: release.yml  tox.yml
numbergroup/: __init__.py  to_group.py
simplebins/: cut.py
tests/: test_count_decimals.py  test_cut_ceiling.py  test_cut_center.py  test_cut_floating_point_error.py  test_cut_floats.py  test_cut_list.py  test_cut_number.py  test_cut_pandas.py  test_to_group_on_list.py  test_to_group_on_number.py
