# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simplebins"
version = "1.0.0"
description = "A lightweight Python utility for binning numeric data into equal-width intervals."
readme = "README.md"
authors = [{ name = "Marius Kaffai", email = "marius.kaffai.sowi@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["binning", "grouping", "categorize"]
dependencies = ["pandas", "numpy"]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = ["pip-tools", "pytest", "bumpver"]

[project.urls]
Homepage = "https://github.com/mariuzka/simplebins"

[tool.bumpver]
current_version = "2025.1001-alpha"
version_pattern = "YYYY.BUILD[-TAG]"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
]
"setup.py" = [
    "{version}",
    "{pep440_version}",
]
"README.md" = [
    "{version}",
    "{pep440_version}",
]

